public class Business extends Property{
    public Business(int id, String label, int cost, int income, int serieID) {
        super(id, label, cost, income, serieID);
    }
}
