public class Main {


    public static void main(String[] args) {
        Game game = new Game("Turnbased game");
   //     game.runDialog();
    }



}